Fixes for LG issues
Fixed search form not hiding when selecting alternate menu option.
Fixed podcast text overflowing the podcast carousel.
Fixed the giantbomb link opening in _blank stopping back button from
working.

--- a/css/main.scss
+++ b/css/main.scss
@@ -142,6 +142,14 @@ input[type="text"] {
     @include respond-to(4k) { margin: 30px;}
   }
 
+  p {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   small {
     margin: 0 50px;
   }
